tests/ui/asm/cfg-parse-error.stderr
error: expected one of `clobber_abi`, `const`, `in`, `inlateout`, `inout`, `label`, `lateout`, `options`, `out`, or `sym`, found `""`
  --> $DIR/cfg-parse-error.rs:16:13
   |
LL |             a = out(reg) x,
   |                            - expected one of 10 possible tokens
LL |             "",
   |             ^^ unexpected token

error: expected one of `clobber_abi`, `const`, `in`, `inlateout`, `inout`, `label`, `lateout`, `options`, `out`, or `sym`, found `""`
  --> $DIR/cfg-parse-error.rs:26:13
   |
LL |             },
   |               - expected one of 10 possible tokens
LL |             "",
   |             ^^ unexpected token

error: expected token: `,`
  --> $DIR/cfg-parse-error.rs:40:26
   |
LL |             a = out(reg) x,
   |                          ^ expected `,`

error: this attribute is not supported on assembly
  --> $DIR/cfg-parse-error.rs:46:13
   |
LL |             #[rustfmt::skip]
   |             ^^^^^^^^^^^^^^^^

error: this attribute is not supported on assembly
  --> $DIR/cfg-parse-error.rs:52:13
   |
LL |             #![rustfmt::skip]
   |             ^^^^^^^^^^^^^^^^^

error: aborting due to 5 previous errors

